# crapy

./: .gitignore  README.ipynb  README.md  crapy.py  justfile  pyproject.toml
bench/: test_bench.py
crapy/: __about__.py  __init__.py  __main__.py  third_party.py
tests/: test_crapy.py  test_version.py
