[tool.poetry]
name = "crapy"
version = "0.0.3"
description = "Make python worse"
authors = ["jessekrubin <jessekrubin@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jessekrubin/crapy"
homepage = "https://github.com/jessekrubin/crapy"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
keywords = ["crap", "python3", "typed"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.270"
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py37"
select = [
    "RUF100", # no unused 'noqa' comments
    "E",      # pyflakes errors
    "F",      # pyflakes warnings
    "B",      # bugbear
    "C4",     # comprehensions
    "ERA001", # erradicate
    "I",      # isort
    "W",
    # "SIM",
    # "PT", # pytest
    "T201", # print
    # pyupgrade
    "UP",
    # pydocstyle
    # "D",
    "D207", # docstring is under-indented
    "D208", # docstring is over-indented
    "D414",
    "D417",
    # flake8-simplify (SIM)
    "SIM",

    # pie (PIE)
    "PIE",
]
line-length = 88

ignore = [
    # "B004",
    # "B904",
    "C417", # super annoying
    "C901", # too complex
    "E501", # line too long,

    # PYUPGRADE
    # keep runtime typing
    "UP007",
    "UP006",

    "UP004",
    "UP009", # utf-8 encoding declaration (I am supersticious)
    "UP022", # must test shellfish first...
    "UP035", # unnecessary typing-extensions imports... must check xtying...
    "UP037",
    # PYDOCSTYLE
    "D415", # first line should end with a period/exclamation point

    # flake8-simplify (SIM)
    "SIM115", # open-file-with-context-handler
    # "SIM105", # suppressible-exception
    # PIE
    "PIE804", # unnecessary-dict-kwargs -- TODO: revisit?
]

[tool.ruff.mccabe]
max-complexity = 20

[tool.ruff.per-file-ignores]
"crapy/third_party.py" = ["F401"]
"**/noxfile.py" = ["D"]
"**/conftest.py" = ["D"]
"**/test_*.py" = [
    "D1",
    "D102",
    "D103", # missing docstring
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true
lines-between-types = 1
known-first-party = []

[tool.isort]
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
lines_between_types = 1
multi_line_output = 3
profile = "black"
skip_glob = [
  "*/setup.py",
  ".nox*",
  "*/.nox_win/**",
  "*/.pytype/*",
]

[tool.codespell]
skip = "*/.nox/*,*/.nox_win/*,*/.pytype/*,*/.mypy_cache/*,*/.venv/*,*/node_modules/*"
ignore-words-list = "opps,te"

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false
include = '\.pyi?$'
exclude = '\.ipynb$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.nox
    | \.nox_win
    | \.nox_lin
    | \.nox_wsl
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | .pytype
  )/
)
'''

[tool.mypy]
plugins = []
python_version = "3.8"
show_error_codes = true
follow_imports = 'silent'
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
implicit_reexport = false
strict = true
strict_equality = true
show_error_context = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_any_generics = false
disallow_untyped_defs = false
